crates/embucket-functions/src/tests/table/snapshots/flatten/query_flatten_empty_outer.snap
---
source: crates/embucket-functions/src/tests/table/flatten.rs
description: "\"SELECT * FROM FLATTEN(INPUT => PARSE_JSON('[]'), OUTER => TRUE) f;\""
---
Ok(
    [
        "+-----+-----+------+-------+-------+------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS |",
        "+-----+-----+------+-------+-------+------+",
        "+-----+-----+------+-------+-------+------+",
    ],
)
