crates/embucket-functions/src/tests/table/snapshots/flatten/query_flatten_outer.snap
---
source: crates/embucket-functions/src/tests/table/flatten.rs
description: "r#\"SELECT * FROM FLATTEN(INPUT => PARSE_JSON('{\"a\":1, \"b\":[77,88]}'), OUTER => TRUE) f;\"#"
---
Ok(
    [
        "+-----+-----+------+-------+-------+-----------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS      |",
        "+-----+-----+------+-------+-------+-----------+",
        "| 1   | a   | a    |       | 1     | {         |",
        "|     |     |      |       |       |   \"a\": 1, |",
        "|     |     |      |       |       |   \"b\": [  |",
        "|     |     |      |       |       |     77,   |",
        "|     |     |      |       |       |     88    |",
        "|     |     |      |       |       |   ]       |",
        "|     |     |      |       |       | }         |",
        "| 1   | b   | b    |       | [     | {         |",
        "|     |     |      |       |   77, |   \"a\": 1, |",
        "|     |     |      |       |   88  |   \"b\": [  |",
        "|     |     |      |       | ]     |     77,   |",
        "|     |     |      |       |       |     88    |",
        "|     |     |      |       |       |   ]       |",
        "|     |     |      |       |       | }         |",
        "+-----+-----+------+-------+-------+-----------+",
    ],
)
