crates/embucket-functions/src/tests/table/snapshots/flatten/query_flatten_path.snap
---
source: crates/embucket-functions/src/tests/table/flatten.rs
description: "r#\"SELECT * FROM FLATTEN(INPUT => PARSE_JSON('{\"a\":1, \"b\":[77,88]}'), PATH => 'b') f;\"#"
---
Ok(
    [
        "+-----+-----+------+-------+-------+-------+",
        "| SEQ | KEY | PATH | INDEX | VALUE | THIS  |",
        "+-----+-----+------+-------+-------+-------+",
        "| 1   |     | b[0] | 0     | 77    | [     |",
        "|     |     |      |       |       |   77, |",
        "|     |     |      |       |       |   88  |",
        "|     |     |      |       |       | ]     |",
        "| 1   |     | b[1] | 1     | 88    | [     |",
        "|     |     |      |       |       |   77, |",
        "|     |     |      |       |       |   88  |",
        "|     |     |      |       |       | ]     |",
        "+-----+-----+------+-------+-------+-------+",
    ],
)
