crates/embucket-functions/src/tests/table/snapshots/flatten/query_flatten_recursive.snap
---
source: crates/embucket-functions/src/tests/table/flatten.rs
description: "r#\"SELECT * FROM  FLATTEN(INPUT => PARSE_JSON('{\"a\":1, \"b\":[77,88], \"c\": {\"d\":\"X\"}}'), RECURSIVE => TRUE ) f;\"#"
---
Ok(
    [
        "+-----+-----+------+-------+------------+--------------+",
        "| SEQ | KEY | PATH | INDEX | VALUE      | THIS         |",
        "+-----+-----+------+-------+------------+--------------+",
        "| 1   | a   | a    |       | 1          | {            |",
        "|     |     |      |       |            |   \"a\": 1,    |",
        "|     |     |      |       |            |   \"b\": [     |",
        "|     |     |      |       |            |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "| 1   | b   | b    |       | [          | {            |",
        "|     |     |      |       |   77,      |   \"a\": 1,    |",
        "|     |     |      |       |   88       |   \"b\": [     |",
        "|     |     |      |       | ]          |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "| 1   | c   | c    |       | {          | {            |",
        "|     |     |      |       |   \"d\": \"X\" |   \"a\": 1,    |",
        "|     |     |      |       | }          |   \"b\": [     |",
        "|     |     |      |       |            |     77,      |",
        "|     |     |      |       |            |     88       |",
        "|     |     |      |       |            |   ],         |",
        "|     |     |      |       |            |   \"c\": {     |",
        "|     |     |      |       |            |     \"d\": \"X\" |",
        "|     |     |      |       |            |   }          |",
        "|     |     |      |       |            | }            |",
        "+-----+-----+------+-------+------------+--------------+",
    ],
)
